--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sebastian Berge</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sebastian Berge | Portfolio</title>
 
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-        
-    </footer>
-</body>
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="https://kit.fontawesome.com/a076d0599.js"></script>
+  </head>
+  <body>
+    <nav class="navbar">
+      <ul class="menu">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
