Working on structure

--- a/index.html
+++ b/index.html
@@ -11,11 +11,26 @@
   </head>
   <body>
     <nav class="navbar">
-      <ul class="menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
+      <div class="max-width">
+        <div class="logo"><a href="">Sebastian Berge</a></div>
+
+        <ul class="menu">
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
     </nav>
+
+    <!-- home section -->
+    <section class="home" id="home">
+      <div class="max-width">
+        <div class="home-content">
+          <div class="text-1">Hello, my name is</div>
+          <div class="text-2">Sebastian Berge</div>
+          <div class="text-3">And I'm a <span>data engineer</span></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
