Working on structure

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="home-content">
           <div class="text-1">Hello, my name is</div>
           <div class="text-2">Sebastian Berge</div>
-          <div class="text-3">And I'm a <span>data engineer</span></div>
+          <div class="text-3">And I'm a <span>data-engineer</span></div>
         </div>
       </div>
     </section>
