Some minor changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </div>
     </nav>
-    <!-- home section start -->
+    <!-- Home / Header -->
     <section class="home" id="home">
       <div class="max-width">
         <div class="home-content">
@@ -49,7 +49,7 @@
         </div>
       </div>
     </section>
-    <!-- about section start -->
+    <!-- About -->
     <section class="about" id="about">
       <div class="max-width">
         <h2 class="title">About me</h2>
@@ -62,7 +62,7 @@
               Hi, my name is Sebastian <span class="typing-2"></span>
             </div>
             <p>
-              And I'm a Computer Engineer. I have allways had the passion for
+              And I'm a Computer Engineer. I have always had the passion for
               computers, coding etc. I currently work for Tietoevry Banking and I'm located in Bergen.
               <br/>
               <br/>
@@ -76,14 +76,12 @@
     <section class="teams" id="portfolio">
       <div class="max-width">
         <h2 class="title">Portfolio</h2>
-        <p style="text-align: center;">To be updated</p>
-        <!--
         <div class="carousel owl-carousel">
           <div class="card">
             <div class="box">
-              <img src="images/profile-1.jpeg" alt="" />
-              <div class="text">Someone name</div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <img src="resources/portfolio/background-generator.png" alt="" />
+              <div class="text">Background Generator</div>
+              <p>Just for fun.</p>
             </div>
           </div>
           <div class="card">
@@ -115,10 +113,9 @@
             </div>
           </div>
         </div>
-        -->
       </div>
     </section>
-    <!-- contact section start -->
+    <!-- Contact -->
     <section class="contact" id="contact">
       <div class="max-width">
         <h2 class="title">Contact</h2>
@@ -158,7 +155,7 @@
         </div>
       </div>
     </section>
-    <!-- footer section start -->
+    <!-- Footer -->
     <footer>
       <span
         >Created by
